--- a/miniprogram/pages/gallery/index.wxml
+++ b/miniprogram/pages/gallery/index.wxml
@@ -10,6 +10,7 @@
         src="{{item.imageUrl}}"
         mode="aspectFill"
         data-imageUrl="{{item.imageUrl}}"
+        data-id="{{item.id}}"
         bindtap="previewImage"></image>
     </view>
   </block>
