--- a/miniprogram/pages/boss/coaches_manage/index.wxml
+++ b/miniprogram/pages/boss/coaches_manage/index.wxml
@@ -30,19 +30,27 @@
       <view class="sub-info">
         <view class="sub-text">
           <text>服务次数</text>
-          <text class="num">{{item.studentCount}}</text>
+          <text class="num">{{ item.studentCount || 0 }}</text>
         </view>
         <view class="sub-text">
           <text>总收入</text>
-          <text class="num">{{item.incomeNum}}</text>
+          <text class="num">{{ item.incomeNum || 0 }}</text>
         </view>
         <view class="sub-text">
-          <text>所属训练场</text>
-          <text class="num">{{item.schoolName}}</text>
+          <text>评分</text>
+          <text class="num">{{ item.starscore || 0 }}</text>
+        </view>
+        <view class="sub-text">
+          <text>科二价格</text>
+          <text class="num">{{ item.subject2Price }}</text>
+        </view>
+        <view class="sub-text">
+          <text>科三价格</text>
+          <text class="num">{{ item.subject3Price }}</text>
         </view>
         <view class="sub-text">
           <text>所属车型</text>
-          <text class="num">{{item.carType}}</text>
+          <text class="num">{{ item.carType }}</text>
         </view>
       </view>
     </view>
