--- a/miniprogram/pages/boss/students_manage/edit/index.wxss
+++ b/miniprogram/pages/boss/students_manage/edit/index.wxss
@@ -1,17 +1,23 @@
+
 page {
   position: relative;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
   width: 750rpx;
-  background-color: rgb(246, 246, 246);
-  padding-bottom: 40rpx;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
 .base-info {
   position: relative;
   width: 630rpx;
-  /* height: 340rpx; */
+  padding: 30rpx;
+  background: #FFF;
+  border-radius: 30rpx;
+  margin-top: 30rpx;
+}
+.school-info {
+  position: relative;
+  width: 630rpx;
   padding: 30rpx;
   background: #FFF;
   border-radius: 30rpx;
@@ -23,7 +29,7 @@ page {
   width: 100%;
   height: 50rpx;
   color: rgb(50, 50, 50);
-  font-size: 30rpx;
+  font-size: 36rpx;
   font-weight: 500;
   line-height: 50rpx;
 }
@@ -54,25 +60,36 @@ page {
   align-items: center;
   width: 630rpx;
   min-height: 40rpx;
-  padding: 10rpx 0;
+  padding: 16rpx 0;
 }
 .form .item .icon {
-  font-size: 30rpx;
+  font-size: 32rpx;
   color: crimson;
   position: relative;
 }
 .form .item .label {
   position: relative;
   margin-left: 10rpx;
-  font-size: 30rpx;
+  font-size: 32rpx;
+  width: 170rpx;
   color: rgb(45, 44, 44);
 }
 .form .item input {
   margin-left: 20rpx;
   height: 40rpx;
   flex: 1;
-  font-size: 30rpx;
+  font-size: 32rpx;
   color: rgb(45, 44, 44);
+}
+.form .item textarea {
+  margin-left: 20rpx;
+  height: 40rpx;
+  flex: 1;
+  font-size: 32rpx;
+  color: rgb(45, 44, 44);
+}
+.form .item .disabled {
+  color: rgb(106, 105, 105);
 }
 /* 修改 placeholder 样式 */
 .form .item .placeholder {
@@ -80,16 +97,36 @@ page {
   font-size: 26rpx;
   font-style: italic;
 }
-.form .item .radios {
+.form .item .upload-image {
   display: flex;
   flex: 1;
-  align-items: center;
-  margin-left: 30rpx;
-  flex-wrap: wrap;
+  height: 150rpx;
+  margin-left: 20rpx;
 }
+.form .item .upload-image .image {
+  width: 150rpx;
+  height: 150rpx;
+  border-radius: 10rpx;
+}
+.upload-image-mask {
+  width: 150rpx;
+  height: 150rpx;
+  border-radius: 10rpx;
+  border: 2rpx dashed #d9d9d9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.upload-image-mask:hover {
+  border: 2rpx dashed #89c4f1;
+}
+.icon-upload {
+  font-size: 24rpx;
+  color: #d9d9d9;
+}
+
 .picker{
-  padding: 10rpx;
-  margin-left: 10rpx;
+  padding: 0rpx 20rpx;
   background-color: #FFFFFF;
   font-size: 30rpx;
   color: rgb(45, 44, 44);
@@ -102,13 +139,7 @@ page {
   width: 690rpx;
   height: 80rpx;
   margin-top: 20rpx;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.bottom-btn .btn {
-  width: 300rpx;
-  height: 80rpx;
+  border-radius: 20rpx;
   background-color: rgb(43, 108, 242);
   display: flex;
   align-items: center;
@@ -116,14 +147,8 @@ page {
   color: #FFF;
   font-size: 30rpx;
   font-weight: 400;
-  border-radius: 20rpx;
 }
-.bottom-btn .cancel {
-  background-color: rgb(255, 255, 255);
-  color: #4b4a4a;
-}
-
-.btn:active {
+.bottom-btn:active {
   background-color: #005bb5;
 }
 /* 隐藏默认的 checkbox */
