--- a/miniprogram/pages/student/orderClass/index.wxml
+++ b/miniprogram/pages/student/orderClass/index.wxml
@@ -69,7 +69,7 @@
       </picker>
     </view>
   </view>
-  <view class="pay-container">
+  <!-- <view class="pay-container">
     <text class="title">支付手段</text>
     <view class="pay-list">
       <view class="pay-list-item">
@@ -78,7 +78,7 @@
         <view class="icon"></view>
       </view>
     </view>
-  </view>
+  </view> -->
   <view class="bottom-btn">
     <view class="btn cancel" bindtap="handleCancel">
       <text>返回</text>
