--- a/miniprogram/pages/orderList/detail/index.wxml
+++ b/miniprogram/pages/orderList/detail/index.wxml
@@ -1,29 +1,87 @@
 <view class="order-container">
-  <view class="coach-info">
-    <view class="base-info">
-      <image src="{{coachInfo.avatar || coachInfo.avatarUrl || images.icons.defaultAvatar }}" />
-      <view class="text-info">
-        <view class="name">
-          <text>{{coachInfo.name || '未指定'}}</text>
-          <text class="score">{{coachInfo.starscore || 0}}</text>
-          <text class="text">分</text>
+  <block wx:if="{{ userInfo.registerType === 'student' }}">
+    <view class="coach-info">
+      <view class="base-info">
+        <image src="{{ orderInfo.coachInfo.avatar || orderInfo.coachInfo.avatarUrl || images.icons.defaultAvatar }}" />
+        <view class="text-info">
+          <view class="name">
+            <text>{{ orderInfo.coachInfo.name || '未指定' }}</text>
+            <text class="score">{{ orderInfo.coachInfo.starscore || 0}}</text>
+            <text class="text">分</text>
+          </view>
+          <view class="sub">
+            <text>服务次数: {{ orderInfo.coachInfo.studentCount || 0 }}</text>
+            <text>服务车型: {{ orderInfo.coachInfo.carType || 0 }}</text>
+          </view>
         </view>
-        <view class="sub">
-          <text >服务次数: {{coachInfo.studentCount || 0}}</text>
-          <text >服务车型: {{coachInfo.carType || 0}}</text>
+        <view class="prices">
+          <text class="sysbol">￥</text>
+          <text class="number">{{ orderInfo.prices }}</text>
         </view>
       </view>
-      <view class="prices">
-        <text class="sysbol">￥</text>
-        <text class="number">{{prices}}</text>
+      <view class="coach-dec" wx:if="{{ orderInfo.coachInfo.description}}">
+        <text>{{ orderInfo.coachInfo.description }}</text>
+      </view>
+      <view class="coach-school">
+        <image src="{{images.icons.class}}" />
+        <text style="margin-left: 20rpx;">{{ orderInfo.trainTypeLabel || '未指定'}}</text>
+      </view>
+      <view class="coach-school">
+        <image src="{{images.icons.time}}" />
+        <text style="margin-left: 20rpx;">{{ orderInfo.orderTime + '   ' + orderInfo.orderTimePeriod || '未指定'}}</text>
+      </view>
+      <view class="coach-school">
+        <image src="{{images.icons.address}}" />
+        <text style="margin-left: 20rpx;">{{ orderInfo.coachInfo.schoolName || '未指定'}}</text>
       </view>
     </view>
-    <view class="coach-dec" wx:if="{{coachInfo.description}}">
-      <text >{{ coachInfo.description }}</text>
+  </block>
+  <block wx:if="{{ userInfo.registerType === 'coach' }}">
+    <view class="coach-info">
+      <view class="base-info">
+        <image src="{{ orderInfo.studentInfo.avatar || orderInfo.studentInfo.avatarUrl || images.icons.defaultAvatar }}" />
+        <view class="text-info">
+          <view class="name">
+            <text>{{ orderInfo.studentInfo.name || '未指定' }}</text>
+            <text class="score">{{ orderInfo.studentInfo.starscore || 0}}</text>
+            <text class="text">分</text>
+          </view>
+          <view class="sub">
+            <text>服务次数: {{ orderInfo.studentInfo.studentCount || 0 }}</text>
+            <text>服务车型: {{ orderInfo.studentInfo.carType || 0 }}</text>
+          </view>
+        </view>
+        <view class="prices">
+          <text class="sysbol">￥</text>
+          <text class="number">{{ orderInfo.prices }}</text>
+        </view>
+      </view>
+      <view class="coach-dec" wx:if="{{ orderInfo.studentInfo.description}}">
+        <text>{{ orderInfo.studentInfo.description }}</text>
+      </view>
+      <view class="coach-school">
+        <image src="{{images.icons.address}}" />
+        <text style="margin-left: 20rpx;">{{ orderInfo.studentInfo.schoolName || '未指定'}}</text>
+      </view>
     </view>
-    <view class="coach-school">
-      <image src="{{images.icons.address}}" />
-      <text style="margin-left: 20rpx;">{{coachInfo.schoolName || '未指定'}}</text>
+  </block>
+  <view class="other-container">
+    <text class="title">其他</text>
+    <view class="other-list">
+      <view class="other-list-item">
+        <text>支付状态</text>
+        <text class="unpaid" wx:if="{{ orderInfo.payStatus === 'unpaid' }}">未支付</text>
+        <text class="paid" wx:if="{{ orderInfo.payStatus === 'paid' }}">已支付</text>
+        <text class="cancel" wx:if="{{ orderInfo.payStatus === 'cancel' }}">已取消</text>
+      </view>
+      <view class="other-list-item">
+        <text>创建时间</text>
+        <text class="cancel">{{ orderInfo.createdAt }}</text>
+      </view>
+      <view class="other-list-item">
+        <text>订单状态</text>
+        <text class="cancel">{{ orderInfo.status === 'created' ? '待接单' : orderInfo.status === 'running' ? '服务中' : '已完成' }}</text>
+      </view>
     </view>
   </view>
   <view class="pay-container">
@@ -41,7 +99,7 @@
       <text>返回</text>
     </view>
     <button class="btn" bindtap="handleButtonClick">
-      <text>提交</text>
+      <text>立即支付</text>
     </button>
   </view>
 </view>
