--- a/miniprogram/pages/orderList/index.wxml
+++ b/miniprogram/pages/orderList/index.wxml
@@ -41,22 +41,17 @@
         <text wx:else>{{item.studentInfo.name + '   ' +item.studentInfo.phone }}</text>
         <text class="marginTop">{{item.orderTime + ' ' + item.orderTimePeriod}}</text>
         <text class="marginTop">预约科目：{{item.trainTypeLabel}}</text>
-        <view class="marginTop">
+        <view class="marginTop showInfo">
           <text style="font-size:24rpx;" class="prices">￥ </text>
           <text class="prices">{{item.prices}}</text>
+          <view wx:if="{{ item.status === 'created' }}" class="statusTag created">等待接单</view>
+          <view wx:if="{{ item.status === 'running' }}" class="statusTag running">等待服务</view>
+          <view wx:if="{{ item.status === 'complete' }}" class="statusTag complete">订单完成</view>
         </view>
       </view>
       <view class="options btn-area">
-        <view wx:if="{{ item.status === 'created' }}" class="created" type="primary">等待接单</view>
-        <view wx:if="{{ item.status === 'running' }}" class="running" type="primary">等待服务</view>
-        <view wx:if="{{ item.status === 'complete' }}" class="complete" type="warn">订单完成</view>
-        <view
-          wx:if="{{ item.status === 'created'}}"
-          class="delete"
-          type="warn"
-          data-id="{{item._id}}"
-          bindtap="onDelete"
-        >取消订单</view>
+        <view wx:if="{{ item.payStatus === 'unpaid' }}" class="unpaid" type="primary">未支付</view>
+        <view class="cancel" type="primary">取消订单</view>
       </view>
     </view>
   </block>
