--- a/miniprogram/pages/orderList/index.wxss
+++ b/miniprogram/pages/orderList/index.wxss
@@ -70,7 +70,7 @@ page {
 .list-item {
   position: relative;
   width: 660rpx;
-  height: 150rpx;
+  height: 200rpx;
   background: #FFF;
   border-radius: 20rpx;
   padding: 30rpx 0 30rpx 30rpx;
@@ -99,10 +99,49 @@ page {
 .marginTop {
   margin-top: 20rpx;
 }
+.showInfo {
+  display: flex;
+}
 .list-item .info .prices {
   font-size: 30rpx;
   color: rgb(255, 48, 48);
   line-height: 40rpx;
+}
+.statusTag {
+  width: 120rpx;
+  height: 40rpx;
+  border-radius: 10rpx;
+  margin-left: 30rpx;
+}
+.list-item .showInfo .created {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120rpx;
+  font-size: 26rpx !important;
+  line-height: 30rpx !important;
+  background: #528CF4;
+  color: #fff;
+}
+.list-item .showInfo .running {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120rpx;
+  font-size: 26rpx !important;
+  line-height: 30rpx !important;
+  background: #e64340;
+  color: #fff;
+}
+.list-item .showInfo .complete {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120rpx;
+  font-size: 26rpx !important;
+  line-height: 30rpx !important;
+  background: #76e77a;
+  color: #fff;
 }
 
 .list-item .options {
@@ -113,22 +152,11 @@ page {
   flex-direction: column;
   justify-content: center
 }
-.list-item .options .created {
+.list-item .options .unpaid {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 120rpx;
-  height: 60rpx;
-  font-size: 26rpx !important;
-  line-height: 30rpx !important;
-  border-radius: 10rpx 0 0 10rpx;
-  background: #528CF4;
-  color: #fff;
-}
-.list-item .options .running {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin-bottom: 20rpx;
   width: 120rpx;
   height: 60rpx;
   font-size: 26rpx !important;
@@ -137,7 +165,7 @@ page {
   background: #e64340;
   color: #fff;
 }
-.list-item .options .complete {
+.list-item .options .cancel {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -146,19 +174,6 @@ page {
   font-size: 26rpx !important;
   line-height: 30rpx !important;
   border-radius: 10rpx 0 0 10rpx;
-  background: #76e77a;
-  color: #fff;
-}
-.list-item .options .delete {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20rpx;
-  width: 120rpx;
-  height: 60rpx;
-  font-size: 26rpx !important;
-  line-height: 30rpx !important;
-  border-radius: 10rpx 0 0 10rpx;
-  background: #e64340;
-  color: #fff;
+  background: #e4e4e4;
+  color: #555555;
 }
