--- a/miniprogram/pages/boss/coaches_manage/edit/index.wxml
+++ b/miniprogram/pages/boss/coaches_manage/edit/index.wxml
@@ -128,7 +128,7 @@
   <view class="form">
     <view class="item">
       <text class="icon">*</text>
-      <text class="label">科目二价格: </text>
+      <text class="label">科二价格: </text>
       <input
         value="{{formData.subject2Price}}"
         data-name="subject2Price"
@@ -140,10 +140,34 @@
     </view>
     <view class="item">
       <text class="icon">*</text>
-      <text class="label">科目三价格: </text>
+      <text class="label">科二收入: </text>
+      <input
+        value="{{formData.subject2Income}}"
+        data-name="subject2Income"
+        type="number"
+        bindinput="fieldChange"
+        base-input="true"
+        placeholder-class="placeholder"
+        placeholder="请输入科目三价格" />
+    </view>
+    <view class="item">
+      <text class="icon">*</text>
+      <text class="label">科三价格: </text>
       <input
         value="{{formData.subject3Price}}"
         data-name="subject3Price"
+        type="number"
+        bindinput="fieldChange"
+        base-input="true"
+        placeholder-class="placeholder"
+        placeholder="请输入科目三价格" />
+    </view>
+    <view class="item">
+      <text class="icon">*</text>
+      <text class="label">科三收入: </text>
+      <input
+        value="{{formData.subject3Income}}"
+        data-name="subject3Income"
         type="number"
         bindinput="fieldChange"
         base-input="true"
